--- a/SCADA/webapi/webapi.csproj
+++ b/SCADA/webapi/webapi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DevExpress.Xpo" Version="22.2.6" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.8">
@@ -22,11 +23,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="database\" />
+    <ProjectReference Include="..\SimulationDriver\SimulationDriver.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SimulationDriver\SimulationDriver.csproj" />
+    <Folder Include="database\" />
   </ItemGroup>
 
 </Project>
