--- a/SCADA/angularapp/package.json
+++ b/SCADA/angularapp/package.json
@@ -19,12 +19,15 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.2.9",
-    "chart.js": "^4.3.0",
     "@stomp/stompjs": "^7.0.0",
     "assert": "^2.0.0",
+    "chart.js": "^4.3.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "crypto-browserify": "^3.12.0",
+    "date-fns": "^2.30.0",
     "https-browserify": "^1.0.0",
     "jest-editor-support": "*",
+    "moment": "^2.29.4",
     "rxjs": "~7.5.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
